# sfa-crm

./: .env.production.example  .gitignore  CLAUDE.md  README.md  reset-demo.bat  start.bat
src/backend/: .ruff.toml  Dockerfile  pyproject.toml
src/backend/app/: main.py
src/backend/app/api/: agent.py  audit.py  auth.py  config.py  contacts.py  customers.py  dashboard.py  followups.py  key_events.py  leads.py  notifications.py  org.py  reports.py  roles.py  users.py  webhooks.py
src/backend/app/core/: auth.py  config.py  database.py  deps.py  init_db.py  security.py  seed_data.py
src/backend/app/models/: audit.py  auth.py  chat_audit.py  config.py  contact.py  customer.py  followup.py  key_event.py  lead.py  llm_call_counter.py  llm_config.py  notification.py  org.py  report.py
src/backend/app/scripts/: __init__.py  encrypt_existing_llm_keys.py
src/backend/app/services/: agent_service.py  audit_service.py  chat_audit_writer.py  customer_service.py  demo_reset_service.py  lead_service.py  llm_circuit_breaker.py  permission_service.py  prompt_guard.py  rate_limiter.py  release_service.py  report_service.py  uniqueness_service.py
src/backend/app/tools/: __init__.py  customer_tools.py  followup_tools.py  lead_tools.py  skill_tools.py
src/backend/scripts/: regression_full.py
src/backend/tests/integration/: conftest.py  test_lead_flows.py
src/backend/tests/unit/: test_chat_audit_model.py  test_chat_audit_writer.py  test_default_configs.py  test_demo_reset.py  test_init_db_backfill.py  test_llm_call_counter_model.py  test_llm_circuit_breaker.py  (+6 more)
(+159 files in other folders)
